# sync

./: README.MD  app.ts  command.sh  module.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
lib/: discover.js  network.js
src/: CatchUpClient.ts  CatchupServer.ts  Client.ts  Discover.ts  Emitter.ts  Master.ts  MediaController.ts  SyncObject.ts  SyncedEmitter.ts  client_definitions.ts  consts.ts  definitions.ts  packet_definitions.ts  server_definitions.ts  shared_consts.ts  shared_definitions.ts  utils.ts
src/client/: RemoteProvider.ts  SyncObject.ts  controllers.ts
src/js/: discover.d.ts  discover.js  network.js
src/server/: Sync.ts  client.ts
sync_rs/: Cargo.toml  readme.md
sync_rs/src/: discover.rs  event_client.rs  event_server.rs  ipc_client.rs  main.rs  messages.rs
tests/integration/: test-discover.ts
tests/unit/: sync.ts
