[package]
name = "sync_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
replace_with = "0.1.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
